# variants

./: CMakeLists.txt  LICENSE  README.md
include/: variants.bool.h  variants.core.h  variants.float32.h  variants.float64.h  variants.h  variants.int16.h  variants.int32.h  variants.int64.h  variants.int8.h  variants.pointer.h  variants.uint16.h  variants.uint32.h  variants.uint64.h  variants.uint8.h
src/: example.cpp  example1.cpp  example2.cpp  example3.cpp
tests/: CMakeLists.txt  testing.cpp
